--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sharmrb/CRUD-REST-API#readme",
   "dependencies": {
+    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.1"
   }
